--- a/scss/assets.scss
+++ b/scss/assets.scss
@@ -6,7 +6,10 @@ body {
     box-sizing: border-box;
     background: url("../img/bg.jpg") no-repeat;
     background-size: cover;
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+h2,h3 {
+    font-family: 'Oswald', sans-serif;
 }
 .container {
     max-width: 1180px;
