--- a/scss/style.scss
+++ b/scss/style.scss
@@ -197,7 +197,7 @@ header {
         padding-left: 10px;
         .request {
             font-size: 20px;
-            margin-bottom: 20px;
+            margin: 0;
         }
         #errorMess {
             padding: 5px;
@@ -205,7 +205,6 @@ header {
             font-size: 16px;
         }
         & form {
-            height: 90px;
             width: 300px;
             border-radius: 8px;
             position: relative;
@@ -246,8 +245,8 @@ header {
                 border-radius: 50px;
                 outline: 0;
                 z-index: 2;
-                top: 22px;
-                right: -32px;
+                top: 74px;
+                right: -34px;
                 border: 6px solid rgb(72, 73, 75);
                 font-size: 25px;
                 padding-left: 7px;
@@ -271,7 +270,7 @@ header {
         width: 45%;
         padding-right: 10px;
     & img {
-        opacity: .5;
+        opacity: .9;
         max-width: 100%;
     }
     .formText {
@@ -279,8 +278,8 @@ header {
         font-size: 22px;
         font-weight: 700;
         text-transform: uppercase;
-        top: 40px;
-        left: 25%;
+        top: 32%;
+        left: 17%;
         z-index: 10;
         font-family: 'Oswald', sans-serif;
     }
@@ -364,7 +363,6 @@ header {
             }
       & form {
         margin: 0 auto;
-        margin-bottom: 60px;
       }
     }
     .formItem {
@@ -373,12 +371,12 @@ header {
         height: 185px;
         overflow: hidden;
         & img {
-            width: 100%;
+            display: none;
         }
         .formText {
         font-size: 20px;
-        top: 35px;
-        left: 35%;
+        top: 0;
+        left: 40%;
         text-align: center;
         }
     }
@@ -416,6 +414,11 @@ header {
         width: 100%;
     .request {
         margin: 0 40px 20px;
+        }
+    }
+    .formItem {
+        .formText {
+            left: 37%;
         }
     }
 }
@@ -499,7 +502,6 @@ header {
     height: 155px;
     .formText {
     font-size: 15px;
-    left: 30%;
     }
 }
 }
@@ -564,4 +566,10 @@ header {
         font-size: 14px;
     }
 }
+    /* Form */
+    .form {
+    .formItem {
+    .formText {
+        left: 30%;
+    }}}
 }
